--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@wojtekmaj/react-timerange-picker": "^3.3.0",
+    "axios": "^1.1.3",
     "mariadb": "^3.0.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
